--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 	<h1 style="text-align:center">Who Is Grace?</h1>
 	<hr>
 	<p><b>I would like to consider myself as a "glass half full person." People I work with, my family, and closest friends tell me that I always see the positive in any situation.</b> To be honest I just want to enjoy life, learn new things and one day meet my man crush Dwayne "The Rock" Johnson. <i>It will happen one day! I will meet Dwayne "The Rock" Johnson and it will be great! </i>  Until then I will just continue to take one day at a time, enjoy my family, continue to learn new things and be ever so grateful to work with an amazing crew. </p>
-	<center><img src="images/graceandrock.jpeg" alt="Grace and her Man Crush Dwayne The Rock Johnson"></center>
+	<center><img src="images/graceandrock.jpg" alt="Grace and her Man Crush Dwayne The Rock Johnson"></center>
 	<h2 style="color:red">Family Life</h2>
+	
 	<p>One thing I pride myself for is having a GREAT family. I have been married for over 25 years and we have 2 adult boys and one adult daughter. Although we have adult children, we are NOT empty nesters. One of my sons and daughter are both still in college and live with us. Fun fact; my daughter was the only girl in our family for 20 years until my granddaughter was born last year. Claire is the one of the biggest joys of our lives. She is super smart, loves to dance and play video games with her dad. Unfortunately Claire Bear lives in Kansas so we only get to see her a few times a year. But we have lots of Facetime calls.</p>
 	<center><img src="images/claire bear.jpg" alt="Granddaughter Claire With Headphones"></center>
 	<center><h3 title="I'm a header">Work Life</h3></center>
 	<p>I have worked in higher education for almost 20 years. I worked at UT Health San Antonio for 5 years in the registrars office. Currently I work at UIW at the Optometry School in the Student Affairs Department. I have been there for 9 years and counting!</p><i>I really enjoy working with current students and alumni!</i> I am also in charge of working with student organizations, developing student programming and special events. I have been fortunate that because I work at UIW, my children receive waivers for their tuition to attend UIW.
 	
-	<center><img src="images/staff picture.jpeg" alt="UIWRSO Student Affairs Staff"></center>
+	<center><img src="images/staff picture.jpg" alt="UIWRSO Student Affairs Staff"></center>
 </body>
 </html>
